--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,8 @@
 
 <body>
 
+{% include google-analytics.html %}
+{% include yandex-metrica.html %}
 
 <script type="text/javascript">
     WebFontConfig = {
