--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
       <div class="container">
         <div class="footer">
           <p>{{ site.author }} &copy; {{ site.copyright }}</p>
+          {% include social.html %}
         </div>
       </div>
     </footer>
