--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,14 @@
                       {% include toc.html html=content class='toc' %}
                     {% endif %}
                     {{ content }}
+                    {% include share.html %}
                   </div>
+                  {% if page.comments %}
+                  <div id="disqus_thread">
+                    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+                  </div>
+                  {% endif %}
                 </div>
               </div>
             </div>
@@ -32,6 +39,7 @@
             </div>
           </div>
         </div>
+        {% include disqus-comments.html %}
       </div>
       {% include footer.html %}
     </div>
